--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 15</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Syria, Afghanistan</b><br>Cause of death: <b>drowned after boat sank off Ayvacik (TR) on way to Lesbos (GR); 70 rescued</b><br>Source: Imkander<br>
+Found dead: <b>11/02/04</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>reportedly drowned after 2 boats travelling to Italy capsized during a storm</b><br>Source: NOB/Vivre<br>
 
 <br>
 
