--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/02/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of hypothermia shortly after arriving in Alboran (ES) by boat</b><br>Source: MNS<br>
+Found dead: <b>22/08/14</b><br>Number of person: <b>239</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing, feared drowned after overcrowded boat capsized off Garibouli (LY); 19 survived</b><br>Source: UNHCR/AP/MNS<br>
 
 <br>
 
