--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/03/02</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (5 women; 7 men)</b><br>Region of origin: <b>Nigeria, Sudan, Turkey</b><br>Cause of death: <b>drowned after vessel capsized in rough sea between Lampedusa (IT) and Malta</b><br>Source: VK/MigrantNews/MNS/AFP/CNN/DPA/ANP/SZ<br>
+Found dead: <b>28/02/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Beqir Sejdiu (man, 36)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>killed in Cirez (KV) by Serbian security forces, deported asylum seeker from Germany</b><br>Source: IRR/ZAG<br>
 
 <br>
 
