--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/07/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hüseyin Dikec (man)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>suicide, at immigration office in Gütersloh (DE), set himself on fire in front of his 5 children out of fear of deportation</b><br>Source: ERB<br>
+Found dead: <b>17/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 17)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>tortured by Turkish border guards near Iskenderun (TR) while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
 
 <br>
 
