--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>died of toxic fumes near Tarifa (ES) trying to cross the Strait of Gibraltar in small boat</b><br>Source: MNS/ELM<br>
+Found dead: <b>25/06/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Victor Onag Hnor</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>jumped in the Havel River, Berlin (DE) after threat of deportation</b><br>Source: Asyl in der Kirche/ARI/ZAG<br>
 
 <br>
 
