--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/06/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Victor Onag Hnor</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>jumped in the Havel River, Berlin (DE) after threat of deportation</b><br>Source: Asyl in der Kirche/ARI/ZAG<br>
+Found dead: <b>02/01/03</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Algeria, Morocco</b><br>Cause of death: <b>drowned after boat sank near Tarifa (ES) off southern coast of Spain</b><br>Source: VK/AP/DPA/AFP/ST/MUGAK<br>
 
 <br>
 
