--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/07/15</b><br>Number of person: <b>25</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Syria, unknown</b><br>Cause of death: <b>3 drowned after 2 boats capsized near Didim (TR) on way to Farmakonisi (GR); 22 missing</b><br>Source: DailySabah<br>
+Found dead: <b>19/01/03</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>froze to death in Turkish boat drifting near Santa Maria di Leuca (IT)</b><br>Source: MNS/Vivre/AFP/AP/TL<br>
 
 <br>
 
