--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/02/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>stowaway, hit by truck in Calais (FR) while trying to reach Great Britain</b><br>Source: Vivre<br>
+Found dead: <b>17/04/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>froze to death in the Belles mountains on Bulgarian-Greek border trying to walk to Greece</b><br>Source: MNS<br>
 
 <br>
 
