--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/04/07</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Liberia</b><br>Cause of death: <b>1 died of hypothermia in hospital after being recovered from boat near Málaga (ES); 1 missing</b><br>Source: EP<br>
+Found dead: <b>10/07/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned in the Oder River on Polish-German border near Gross Breesen (DE)</b><br>Source: German Government<br>
 
 <br>
 
