--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/01/14</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 child; 1 woman, mother)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after encounter with Greek coast guard caused boat to capsize near Farmakonisi (GR)</b><br>Source: ProAsyl/ECRE/Infomobile/Euronews/Xinhua<br>
+Found dead: <b>07/07/08</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N. (1 baby; 4 women; 9 men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after vessel turned near coast of Motril, Granada (ES)</b><br>Source: MNS/EP/PICUM/NOB<br>
 
 <br>
 
