--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/02/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tesfaye (man, 26)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>body found in tent in migrant camp in Calais (FR)</b><br>Source: IBT<br>
+Found dead: <b>30/08/08</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>reportedly drowned after boat capsized between Algeria and Sardinia (IT)</b><br>Source: NOB/FE<br>
 
 <br>
 
