--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/08/08</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>reportedly drowned after boat capsized between Algeria and Sardinia (IT)</b><br>Source: NOB/FE<br>
+Found dead: <b>25/11/17</b><br>Number of person: <b>31</b><br>Name, gender, age: <b>N.N (3 children; 18 women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat capsized off Garabulli (LY); unknown number missing, 60 rescued</b><br>Source: Reu./BBC/IOM/AFP/LibCoastG<br>
 
 <br>
 
