--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jun 13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Georgia</b><br>Cause of death: <b>stowaway, froze to death on charter flight from Russia; body on 7 flights before discovery</b><br>Source: News24/VK/Z24<br>
+Found dead: <b>10/06/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Mozambique</b><br>Cause of death: <b>died after injuries sustained during a fire at refugee centre in Dresden (DE)</b><br>Source: ZAG<br>
 
 <br>
 
