--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/06/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Mozambique</b><br>Cause of death: <b>died after injuries sustained during a fire at refugee centre in Dresden (DE)</b><br>Source: ZAG<br>
+Found dead: <b>Feb 99</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 babies)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>died from poor hygiene conditions in refugee camp at Muratella (IT)</b><br>Source: IRR<br>
 
 <br>
 
