--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 99</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 babies)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>died from poor hygiene conditions in refugee camp at Muratella (IT)</b><br>Source: IRR<br>
+Found dead: <b>18/07/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>decomposing body found floating off coast of Barbate (ES)</b><br>Source: MNS<br>
 
 <br>
 
