--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/10/03</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned in waters of Bahía Feliz, Gran Canaria (ES) after boat was intercepted</b><br>Source: AFP/MUGAK<br>
+Found dead: <b>14/10/17</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 young men)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>shot by Turkish border guards near Dorriyeh (SY) while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
 
 <br>
 
