--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/11/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, ±12)</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>stowaway, found frozen at Heathrow Airport (GB) in undercarriage of airplane from Ghana</b><br>Source: GuardianUn./Annanova/Telegraph/Myjoyonline/IRR<br>
+Found dead: <b>13/02/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Muhammad Nadim (man, 28)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>suicide, hanged himself with towels in Amygdaleza detention centre (GR)</b><br>Source: KI/IRR<br>
 
 <br>
 
