--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/02/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Muhammad Nadim (man, 28)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>suicide, hanged himself with towels in Amygdaleza detention centre (GR)</b><br>Source: KI/IRR<br>
+Found dead: <b>04/01/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Alta Ming (woman, 34)</b><br>Region of origin: <b>Mongolia</b><br>Cause of death: <b>died giving birth without medical help in Rennes (FR), had been homeless since husband was detained in NL</b><br>Source: Rue89<br>
 
 <br>
 
