--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±25)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>reportedly drowned after shipwreck near Tarifa (ES) trying to reach Spain</b><br>Source: ELM/EP<br>
+Found dead: <b>27/10/09</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N. (5 children; 3 w; 1 man, ±30)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned after wooden boat from Turkey hit rocks on Mytilini, Lesbos (GR)</b><br>Source: LR/TDN/Le Figaro/CDS/Migreurop/ANSA/gara.net<br>
 
 <br>
 
