--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/08/01</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat sank near Fuerteventura (ES)</b><br>Source: MNS<br>
+Found dead: <b>04/06/17</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Pakistan, Afghanistan</b><br>Cause of death: <b>accident with minibus driven by 16-year-old near Pazardjik (BG) close to Turkish-Greek border; 7 survivors</b><br>Source: DW/IOM<br>
 
 <br>
 
