--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Miya Makodila (girl, 12)</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>died in arson attack on refugee hostel in Lübeck (DE)</b><br>Source: IRR/Independent/BAIN news/ZAG<br>
+Found dead: <b>07/11/99</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Syria, Iraq</b><br>Cause of death: <b>drowned after boat travelling to Greece capsized off coast of Turkey</b><br>Source: AFP<br>
 
 <br>
 
