--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/10/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead on beach near Tarifa (ES) trying to cross the Strait of Gibraltar</b><br>Source: MNS<br>
+Found dead: <b>23/05/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hiva Fazil Emin (woman, 32)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died when truck carrying 35 refugees flipped near Köprüköy (TR)</b><br>Source: HRFT<br>
 
 <br>
 
