--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/05/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sulko Yenci (25)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned after small boat collided with coast guards near Otranto (IT)</b><br>Source: taz/GiulianoNewsChronicle/AFP/IRR<br>
+Found dead: <b>28/03/11</b><br>Number of person: <b>27</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, found off coast of Kerkennah (TN) after 2 boats travelling from Libya sank</b><br>Source: PUB/TunisieSoir/GuardianUn./MUGAK/Quotidiano<br>
 
 <br>
 
