--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/06/17</b><br>Number of person: <b>19</b><br>Name, gender, age: <b>N.N (2 children; 9 women; 8 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, bodies washed up to Zarzis (TN)</b><br>Source: IOM Tunisia<br>
+Found dead: <b>30/01/04</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (2 men, ±25)</b><br>Region of origin: <b>China, Afghanistan</b><br>Cause of death: <b>drowned after boat sank during storm near Rafina (GR)</b><br>Source: MNS<br>
 
 <br>
 
