--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Dec 99</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned near Canary Islands (ES) trying to reach Spanish territory in small boats</b><br>Source: Informe Raxen<br>
+Found dead: <b>Jan 03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, found on beach at Symi (GR)</b><br>Source: KI/IRR<br>
 
 <br>
 
