--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/03/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>stowaway, electrocuted climbing on roof of train travelling from Como (IT) to Switzerland</b><br>Source: WorldRadio<br>
+Found dead: <b>11/05/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Forsina Makoni (woman, 79)</b><br>Region of origin: <b>Zimbabwe</b><br>Cause of death: <b>suicide, set herself on fire after asylum claim was rejected</b><br>Source: Socialist Worker/NCADC/IRR<br>
 
 <br>
 
