--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/05/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Forsina Makoni (woman, 79)</b><br>Region of origin: <b>Zimbabwe</b><br>Cause of death: <b>suicide, set herself on fire after asylum claim was rejected</b><br>Source: Socialist Worker/NCADC/IRR<br>
+Found dead: <b>12/10/09</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (3 children; 4 women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat sank by Kani-Keli in Mayotte (FR) on way from Comoros</b><br>Source: Malanga<br>
 
 <br>
 
