--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/12/95</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned after boat capsized near Santa Cesarea Terme (IT)</b><br>Source: VK/IRR/ILM/CDS/FECL/TL<br>
+Found dead: <b>25/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead near Barbate (ES); had probably attempted to cross from Morocco</b><br>Source: IOM<br>
 
 <br>
 
