--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/11/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 4)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>died after falling out of window at Villa Salus reception centre, Bologna (IT)</b><br>Source: LR<br>
+Found dead: <b>01/03/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ali Jafari (man, 25)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>went missing after deportation to Afghanistan after 18 months of asylum in Middlesbrough (GB)</b><br>Source: Evening Gazette<br>
 
 <br>
 
